Account for file-specific formatting differences

--- a/mainunit.lfm
+++ b/mainunit.lfm
@@ -1,11 +1,12 @@
-object Form1: TForm1
+object formPadXml: TformPadXml
   Left = 318
   Height = 457
   Top = 250
   Width = 713
-  Caption = 'Form1'
+  Caption = 'formPadXml'
   ClientHeight = 457
   ClientWidth = 713
+  Menu = MainMenu
   LCLVersion = '4.4.0.0'
   OnCreate = FormCreate
   OnDestroy = FormDestroy
@@ -21,8 +22,34 @@ object Form1: TForm1
     Filter = [tkInteger, tkChar, tkEnumeration, tkFloat, tkSet, tkMethod, tkSString, tkLString, tkAString, tkWString, tkVariant, tkArray, tkRecord, tkInterface, tkClass, tkObject, tkWChar, tkBool, tkInt64, tkQWord, tkDynArray, tkInterfaceRaw, tkProcVar, tkUString, tkUChar, tkHelper, tkFile, tkClassRef, tkPointer]
     Indent = 16
     NameFont.Color = clWindowText
+    OnEditorFilter = peditPadEditorFilter
     PreferredSplitterX = 200
     SplitterX = 200
     ValueFont.Color = clMaroon
+  end
+  object MainMenu: TMainMenu
+    Left = 216
+    Top = 160
+    object menuFile: TMenuItem
+      Caption = 'File'
+      object menuFileNew: TMenuItem
+        Caption = 'New'
+      end
+      object menuFileOpen: TMenuItem
+        Caption = 'Open...'
+      end
+      object menuFileSave: TMenuItem
+        Caption = 'Save'
+      end
+      object menuFileSaveAs: TMenuItem
+        Caption = 'Save as...'
+      end
+      object Separator1: TMenuItem
+        Caption = '-'
+      end
+      object menuFileExit: TMenuItem
+        Caption = 'Exit'
+      end
+    end
   end
 end
