--- a/src/mainunit.lfm
+++ b/src/mainunit.lfm
@@ -38,18 +38,22 @@ object formPadXml: TformPadXml
       Caption = 'File'
       object menuFileNew: TMenuItem
         Caption = 'New'
+        ShortCut = 16462
         OnClick = menuFileNewClick
       end
       object menuFileOpen: TMenuItem
         Caption = 'Open...'
+        ShortCut = 16463
         OnClick = menuFileOpenClick
       end
       object menuFileSave: TMenuItem
         Caption = 'Save'
+        ShortCut = 16467
         OnClick = menuFileSaveClick
       end
       object menuFileSaveAs: TMenuItem
         Caption = 'Save as...'
+        ShortCut = 24659
         OnClick = menuFileSaveAsClick
       end
       object Separator1: TMenuItem
